# cad-ai

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
docs/: autocad-batch-commander-spec.md  windows-setup.md
knowledge/qa/: _index.md
knowledge/qa/agencies/: 01-jkr-specifications.md  02-cidb-requirements.md  03-doe-environmental.md
knowledge/qa/building-types/: 01-highrise.md  02-industrial.md  03-healthcare.md  04-educational.md
knowledge/qa/fire-bylaws/: 01-fire-certificate.md  02-fire-escape.md  03-fire-fighting-systems.md  04-fire-door-ratings.md  05-highrise-fire.md
knowledge/qa/green-building/: 01-gbi-certification.md  02-solar-renewable.md
knowledge/qa/infrastructure/: 01-tnb-electrical.md  02-water-sewerage.md  03-telecom.md
knowledge/qa/legislation/: 01-act133-sdba.md  02-act172-planning.md  03-strata-management.md  04-housing-development.md
knowledge/qa/local-authority/: 01-osc-process.md  02-dbkl-requirements.md  03-selangor-pbt.md
knowledge/qa/professional/: 01-lam-architects.md  02-bem-engineers.md  03-bqsm-qs.md
knowledge/qa/standards/: 01-ms1525-energy.md  02-ms2680-residential-energy.md  03-ms1184-accessibility.md  04-ms-fire-standards.md
knowledge/qa/ubbl/: 01-general-provisions.md  02-building-operations.md  03-spatial-requirements.md  04-fire-requirements.md  05-parking-requirements.md  06-accessibility-requirements.md  07-temporary-works.md  08-structural-requirements.md  09-constructional-requirements.md  10-2021-amendment.md  11-demolition.md  12-fire-alarm-systems.md  13-miscellaneous.md  14-schedule-fifth.md  15-schedule-seventh.md  16-schedule-ninth.md  17-schedule-tenth.md  (+1 more)
scripts/: embed_knowledge.py  extract_ubbl.py  setup_supabase.sql
src/autocad_batch_commander/: __init__.py  config.py  models.py
standards/: aia.json  bs1192.json  dimension_mapping.json  ubbl.json
standards/rules/: accessibility.json  bomba-fire-systems.json  energy-efficiency.json  environmental.json  ubbl-constructional.json  ubbl-fire-expanded.json  ubbl-fire.json  ubbl-spatial.json
tests/: conftest.py  test_audit_ops.py  test_block_ops.py  test_chat_models.py  test_cli.py  test_cli_new_commands.py  test_compliance_ops.py  test_drawing_ops.py  test_embeddings.py  test_file_ops.py  test_geometry_ops.py  test_knowledge_loader.py  test_layer_ops.py  test_models.py  test_multi_cad.py  test_rag.py  test_text_ops.py  test_xref_ops.py
(+31 files in other folders)
