[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autocad-batch-commander"
version = "0.1.0"
description = "Batch operations for AutoCAD drawings — text find/replace, layer rename, standardization, and audit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Hazman" }]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
windows = ["pywin32>=305"]
knowledge = [
    "pymupdf>=1.23.0",
    "python-frontmatter>=1.0.0",
]
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.7",
]
ai = [
    "openai>=1.12.0",
    "supabase>=2.3.0",
    "tiktoken>=0.6.0",
    "sse-starlette>=1.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
autocad-cmd = "autocad_batch_commander.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/autocad_batch_commander"]
artifacts = ["src/autocad_batch_commander/web/templates/**"]

[tool.hatch.build.targets.sdist]
include = ["src/autocad_batch_commander", "standards", "knowledge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
